# particleblood-rust-gpu

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  main.js  styles.css
docs/: PLAN-share-once-melt-forever.md
src/: lib.rs
