[package]
name = "rustyparts"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"

[dependencies.web-sys]
version = "0.3.77"
features = [
  "CanvasRenderingContext2d",
  "console",
  "CssStyleDeclaration",
  "DeviceAcceleration",
  "DeviceMotionEvent",
  "Document",
  "DomRect",
  "DomTokenList",
  "Element",
  "Event",
  "EventTarget",
  "HtmlCanvasElement",
  "HtmlElement",
  "HtmlInputElement",
  "ImageData",
  "KeyboardEvent",
  "Location",
  "MouseEvent",
  "Navigator",
  "Node",
  "NodeList",
  "PointerEvent",
  "WebGl2RenderingContext",
  "WebGlBuffer",
  "WebGlFramebuffer",
  "WebGlProgram",
  "WebGlShader",
  "WebGlTexture",
  "WebGlUniformLocation",
  "WebGlVertexArrayObject",
  "WheelEvent",
  "Window",
]
